--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,34 @@
-{"name":"Bus Army dude's Profile","short_name":"Bus Army Dude's Profile","icons":[{"src":"images/favicon-192x192.png","sizes":"192x192","type":"image/png"},{"src":"/android-icon-512x512.png","sizes":"512x512","type":"image/png"}],"theme_color":"#ffffff","background_color":"#ffffff","display":"standalone"}
+{
+  "name": "Bus Army Dude's Profile",
+  "short_name": "Bus Army Dude",
+  "icons": [
+    {
+      "src": "/assets/light-icon/180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/assets/dark-icon/180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/assets/light-icon/512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/assets/dark-icon/512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "theme_color": "#ffffff",  // Light theme color
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "start_url": "/index.html"
+}
